[workspace]
resolver = "3"
members = [ "examples/std_example_tcp", "examples/tokio_example_tcp", "examples/tokio_example_udp"]

[package]
name = "ultimatum"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axboe-liburing = "2.13.0"
libc = "0.2.178"
memmap2 = "0.9.9"
nix = "0.30.1"
bytemuck = "1.24.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
